Change content and styles in projects section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </li>
                 <li>
                     <a target="blank"
-                        href="https://drive.google.com/file/d/1Z4Yjota5j8mTEbtwg5IOIB7hlarQuBY1/view?usp=sharing">CV <i
+                        href="https://drive.google.com/file/d/1EwuryfBUCisn3V7vOs_tDwxkHxVgpwnc/view?usp=share_link">CV <i
                             class="fas fa-download"></i></a>
                 </li>
             </ul>
@@ -72,22 +72,31 @@
                 <div class="aboutMe__container__information__item">
                     <h3>SOBRE MI</h3>
                     <p class="animado">
-                        Soy Analista Programador Universitario y actualmente estoy estudiando Ingeniería en Computación. Me gusta el desarrollo web, y es por esto, que decidí orientar mis estudios por el desarrollo Front-End.
+                        Soy Analista Programador Universitario y actualmente estoy estudiando Ingeniería en Computación.
+                        Me gusta el desarrollo web, y es por esto, que decidí orientar mis estudios por el desarrollo
+                        Front-End.
                     </p>
                     <p class="animado">
-                        Me considero una persona entusiasta por encarar nuevos proyectos y en adquirir conocimientos que me permitan mejorar en mi desempeño dia a dia. Me gusta aprender sobre otros y compartir mis conocimientos.
+                        Me considero una persona entusiasta por encarar nuevos proyectos y en adquirir conocimientos que
+                        me permitan mejorar en mi desempeño dia a dia. Me gusta aprender sobre otros y compartir mis
+                        conocimientos.
                     </p>
                     <p class="animado">
-                        Inicie mi camino en el desarrollo web en la universidad, realizando pequeños proyectos junto a mis compañeros. Luego decidí continuar mis estudios de forma autodidacta con libros, guias y cursos en linea.  
+                        Inicie mi camino en el desarrollo web en la universidad, realizando pequeños proyectos junto a
+                        mis compañeros. Luego decidí continuar mis estudios de forma autodidacta con libros, guias y
+                        cursos en linea.
                     </p>
                 </div>
                 <div class="aboutMe__container__information__item">
                     <h3>EXPERIENCIA</h3>
                     <p class="animado">
-                        Tutor en cursos de Javascript en Coderhouse. En donde, doy respuestas a las dudas y consultas de los alumnos durante las clases en linea. Además, me encargo de corregir y brindar feedback a sus entregas de proyectos.
+                        Tutor en cursos de Javascript en Coderhouse. En donde, doy respuestas a las dudas y consultas de
+                        los alumnos durante las clases en linea. Además, me encargo de corregir y brindar feedback a sus
+                        entregas de proyectos.
                     </p>
                     <p class="animado">
-                        También cuento con proyectos que realicé como parte de trabajos finales en cursos y otros como proyectos personales para solucionar ciertas necesidades mias ó de conocidos. 
+                        También cuento con proyectos que realicé como parte de trabajos finales en cursos y otros como
+                        proyectos personales para solucionar ciertas necesidades mias ó de conocidos.
                     </p>
                 </div>
             </div>
@@ -135,14 +144,14 @@
     <section class="projects" id="projects">
 
         <div class="projects-container">
-            <h2>Estos son algunos de mis proyectos</h2>
+            <h2>PROYECTOS</h2>
             <div class="projects__item">
-                <img src="./asetts/usefullApps.png" alt="useful apps site demo">
+                <img src="./asetts/usefullApp.jpeg" alt="useful apps site demo">
                 <div class="projects__item__information">
-                    <h3>Useful Apps</h3>
-                    <p>Sitio con aplicaciones que utiles para usar a diario. Cuenta con una app para ver el clima en una
-                        ciudad ingresada y con un conversor de pesos AR a dolar blue, usando el precio de cambio real.
-                        Hecho con react.
+                    <h3>USEFUL APPS</h3>
+                    <p>Sitio web con aplicaciones utiles para usar a diario. Cuenta con apps para realizar conversiones
+                        de peso AR a USD, para obtener el clima por ciudad y una app de pomodoro. Hecho con React JS y
+                        Redux.
                     </p>
                     <div class="projects__item__information__btns">
                         <a href="https://useful-apps.netlify.app/" target="_blank">Ver sitio</a>
@@ -154,9 +163,9 @@
             <div class="projects__item">
                 <img class="imgResponsive" src="./asetts/musicShop.png" alt="musicShop site demo">
                 <div class="projects__item__information">
-                    <h3>MusicShop</h3>
-                    <p>Eccomerce sobre venta de intrumentos musicales, con lectura de datos y registro de compra en
-                        Firebase. Hecho con React JS, Tailwind y Firebase.</p>
+                    <h3>MUSICSHOP</h3>
+                    <p>Ecommerce sobre venta de intrumentos musicales. Cuenta con una base de datos para la obtención
+                        del inventario y registro de compras. Hecho con React JS, tailwind y Firebase.</p>
                     <div class="projects__item__information__btns">
                         <a href="https://music-shop-arg.netlify.app/" target="_blank">Ver sitio</a>
                         <a href="https://github.com/jorge088/MusicShop" target="_blank">Ver codigo</a>
@@ -165,24 +174,10 @@
                 <img class="imgLargeScreen" src="./asetts/musicShop.png" alt="musicShop site demo">
             </div>
             <div class="projects__item">
-                <img src="./asetts/sportshop.png" alt="sportshop site demo">
-                <div class="projects__item__information">
-                    <h3>Sportshop</h3>
-                    <p>Ecommerce de venta de indumentaria deportiva, con carrito de compras, buscador, filtros por
-                        categoria y formulario de compra. Hecho con js, css y sass.
-                    </p>
-                    <div class="projects__item__information__btns">
-                        <a href="https://sportshoparg.netlify.app/" target="_blank">Ver sitio</a>
-                        <a href="https://github.com/jorge088/sportShop" target="_blank">Ver codigo</a>
-                    </div>
-                </div>
-            </div>
-            <div class="projects__item">
                 <img class="imgResponsive" src="./asetts/simonDice.jpeg" alt="simon dice game site demo">
                 <div class="projects__item__information">
-                    <h3>Simon Dice</h3>
-                    <p>Sitio para jugar el famoso Simon Dice, cuenta con un registro de usuario contador de puntaje.
-                        Hecho con js y bootstrap.
+                    <h3>SIMON DICE</h3>
+                    <p>App del famoso juego Simon Dice. Se utiliza el patrón de arquitectura MVC para desarrollar la logica del funcionamiento del juego. Cuenta con registro de puntajes y datos del jugador en una base de datos. Hecho con Javascript, Bootstrap, Sass y Firebase.  
                     </p>
                     <div class="projects__item__information__btns">
                         <a href="https://app-simon-dice.netlify.app/" target="_blank">Ver sitio</a>
@@ -191,6 +186,20 @@
                 </div>
                 <img class="imgLargeScreen" src="./asetts/simonDice.jpeg" alt="simon dice game site demo">
             </div>
+            <div class="projects__item">
+                <img src="./asetts/sportshop.png" alt="sportshop site demo">
+                <div class="projects__item__information">
+                    <h3>SPORTSHOP</h3>
+                    <p>Ecommerce de venta de indumentaria deportiva, con carrito de compras, buscador, filtros por
+                        categoria y formulario de compra. Hecho con Javascript, css y sass.
+                    </p>
+                    <div class="projects__item__information__btns">
+                        <a href="https://sportshoparg.netlify.app/" target="_blank">Ver sitio</a>
+                        <a href="https://github.com/jorge088/sportShop" target="_blank">Ver codigo</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
